Functional prototypes of JS scripts

--- a/en/about.html
+++ b/en/about.html
@@ -19,14 +19,6 @@
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <!-- My CSS -->
     <link rel="stylesheet" href="../assets/css/styles.css">
-
-
-    <!-- My JavaScript, currently having problems loading it correctly -->
-
-    <script type="javascript" src="../assets/js/bookLoader.js"></script>
-    <script type="javascript" src="../assets/js/main.js"></script>
-
-
 </head>
 
 <body id="bg-img">
@@ -86,6 +78,10 @@
         </div>
 
     </div>
+    <!-- My JavaScript -->
+
+    <script type="javascript" src="../assets/js/main.js"></script>
+
 
 
 </body>
