--- a/en/books.html
+++ b/en/books.html
@@ -20,13 +20,6 @@
   <!-- My CSS -->
   <link rel="stylesheet" href="../assets/css/styles.css">
 
-
-  <!-- My JavaScript, currently having problems executing it correctly -->
-
-  <script type="javascript" src="../assets/js/bookLoader.js"></script>
-  <script type="javascript" src="../assets/js/main.js"></script>
-
-
 </head>
 
 <body id="bg-img">
@@ -91,6 +84,12 @@
     </div>
 
   </div>
+
+
+  <!-- My JavaScript, currently having problems executing it correctly -->
+
+  <script src="../assets/js/bookLoader.js"></script>
+  <script src="../assets/js/main.js"></script>
 
 
 </body>
