finished bookLoader.js and sendmail.JS.

--- a/en/contact.html
+++ b/en/contact.html
@@ -106,6 +106,7 @@
                     <br>
                     <input type="submit" class="btn btn-primary" value="Send" id="formSubmit">
                 </form>
+                <h3 id="mail-confirm"></h3>
             </div>
         </div>
     </div>
