--- a/en/books.html
+++ b/en/books.html
@@ -58,39 +58,58 @@
 
   <div class="container">
     <div class="row content-wrapper bg-light">
-      <div class="col-md-3 col-sm-12">
-        <h1>Placeholder</h1>
-        <p id="description-en">This is where the list of books will be:
-        <ul class="list-group">
-          <button class="list-group-item list-group-item-action" id="btn-april-en">April Witch</button></li>
-          <button class="list-group-item list-group-item-action" id="btn-rosario-en">Rosario is dead</button></li>
+      <div class="col-md-4 col-xs-12">
 
-        </ul>
-        </p>
-      </div>
-      <div class="col-md-6 col-sm-12">
-        <h1>Placeholder</h1>
-        <div id="img-container">
+        <!-- Buttons that trigger the tabs in accordance with bookLoader.js -->
+        <div>
+          <h1>Majgulls Novels:</h1>
+          <br>
+          <br>
+          <button class="list-group-item list-group-item-action" id="btn-april-en">April Witch</button>
+          <button class="list-group-item list-group-item-action" id="btn-rosario-en">Rosario is dead</button>
+
+          <button class="list-group-item list-group-item-action" id="btn-nifelheim-en">Far away from
+            Nifelheim</button>
+
+          <button class="list-group-item list-group-item-action" id="btn-denjagaldrigvar-en">The woman I never
+            was</button></li>
+          <button class="list-group-item list-group-item-action" id="btn-dittlivochmitt-en">Your life and
+            mine</button>
+
+          <button class="list-group-item list-group-item-action" id="btn-moderspassion-en">Mother's Passion</button>
+
+          <button class="list-group-item list-group-item-action" id="btn-slumpvandring-en">Random House</button>
+
+          <button class="list-group-item list-group-item-action" id="btn-miriam-en" href="#miriam-tab">My name is not
+            Miriam</button>
+          <button class="list-group-item list-group-item-action" id="btn-isochvatten-en">Ice and water, water and
+            ice</button>
 
         </div>
 
-        <p>This is where the book-content will be dumped from the list, images, isbn, relevant quotes, links etc.</p>
       </div>
-      <div class="col-md-3 col-sm-12">
-        <p id="calendar-events">Temporary placeholder, will populate with data from Google Calendar API.</p>
+      <div class="col-md-8 col-xs-12">
+        <span id="book-content-span">
+        <span id="img-container">
+        </span>
+        <p id="book-data" style="float: right;">
+        <h2 id="title"></h2>
+        <br>
+        <h5 id="published"></h5>
+        <br>
+        <h5 id="isbn"></h5>
+        <br>
+        <h5 id="quote"></h5>
+        </p>
+      </span>
       </div>
-
-
     </div>
-
   </div>
 
-
-  <!-- My JavaScript, currently having problems executing it correctly -->
+  <!-- My JavaScript -->
 
   <script src="../assets/js/bookLoader.js"></script>
   <script src="../assets/js/main.js"></script>
-
 
 </body>
 
