loadCalEvents.js functional

--- a/en/start.html
+++ b/en/start.html
@@ -17,6 +17,9 @@
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <!-- Font Awesome 6-->
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.0/css/all.css"
+    integrity="sha384-Bfad6CLCknfcloXFOyFnlgtENryhrpZCe29RTifKEixXQZ38WheV+i/6YWSzkz3V" crossorigin="anonymous">
   <!-- My CSS -->
   <link rel="stylesheet" href="../assets/css/styles.css">
 </head>
@@ -61,7 +64,9 @@
         <img class="portrait-img" src="../assets/images/Majgull_axelsson_portrait.jpg">
         <br>
         <br>
-        <p>Majgull Axelsson is an author, lecturer and journalist from Sweden. Her books have been translated into over twenty languages. Amongst the awards she's received for her work is Augustpriset (1997), BMF-Plaketten (1997, 2014) and the Ivar Lo award (2015).</p>
+        <p>Majgull Axelsson is an author, lecturer and journalist from Sweden. Her books have been translated into over
+          twenty languages. Amongst the awards she's received for her work is Augustpriset (1997), BMF-Plaketten (1997,
+          2014) and the Ivar Lo award (2015).</p>
       </div>
       <div class="col-md-6 col-sm-12">
         <h1>Welcome to Majgull Axelssons official site!</h1>
@@ -77,9 +82,11 @@
           of Lorem Ipsum</p>
       </div>
       <div class="col-md-3 col-sm-12">
-        <h2>Upcoming events:</h2><br>
+        <h2>Upcoming events:</h2>
         <p>(Please note, event-descriptions are usually listed in Swedish.)</p>
-        <span id="calendar-events"><p>Temporary placeholder, will populate with data from Google Calendar API.</p></span>
+        <br>
+        <span id="calendar-events">
+        </span>
       </div>
 
 
@@ -93,6 +100,6 @@
   <!-- Config.js not included as it contains protected data (API-keys etc), available for review on request. -->
   <script src="../assets/js/config.js"></script>
   <script src="../assets/js/loadCalEvents.js"></script>
-  </body>
+</body>
 
 </html>
