Removing unneccesary duplicates

--- a/en/books.html
+++ b/en/books.html
@@ -47,10 +47,10 @@
     <!-- Navbar section for toggling language, TODO: update on each html so the href is correct for that page -->
     <ul class="navbar-nav">
       <li class="nav-item">
-        <a class="nav-link mr-4" href="../sv/start.html"><img src="../assets/images/icons/sweden-flag-icon-16.png"></a>
+        <a class="nav-link mr-4" href="../sv/books.html"><img src="../assets/images/icons/sweden-flag-icon-16.png"></a>
       </li>
       <li class="nav-item mr-4">
-        <a class="nav-link" href="../en/start.html"><img
+        <a class="nav-link" href="../en/books.html"><img
             src="../assets/images/icons/united-kingdom-flag-icon-16.png"></a>
       </li>
     </ul>
@@ -58,7 +58,7 @@
 
   <div class="container">
     <div class="row content-wrapper bg-light">
-      <div class="col-md-4 col-xs-12">
+      <div class="col-md-4 col-xs-12" id="books-navtab">
 
         <!-- Buttons that trigger the tabs in accordance with bookLoader.js -->
         <div>
