--- a/en/start.html
+++ b/en/start.html
@@ -64,22 +64,33 @@
         <img class="portrait-img" src="../assets/images/Majgull_axelsson_portrait.jpg">
         <br>
         <br>
-        <p>Majgull Axelsson is an author, lecturer and journalist from Sweden. Her books have been translated into over
+        <p>Majgull Axelsson is an author, lecturer and journalist from Landskrona, Sweden. Her books have been translated into over
           twenty languages. Amongst the awards she's received for her work is Augustpriset (1997), BMF-Plaketten (1997,
           2014) and the Ivar Lo award (2015).</p>
+          <br>
+          <h6>Links:</h6>
+          <br>
+
       </div>
       <div class="col-md-6 col-sm-12">
-        <h1>Welcome to Majgull Axelssons official site!</h1>
-        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
-          industry's
-          standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to
-          make
-          a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting,
-          remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets
-          containing
-          Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including
-          versions
-          of Lorem Ipsum</p>
+        <h2>Welcome to Majgull Axelssons official website!</h2>
+        <br>
+        <br>
+        <p>This website is the official homepage for Majgull Axelsson, a Swedish author who has been translated into over 20 languages. Through her career she has moved from producing
+          documentary-books about child labour and destitute, homeless children to novels such as 'April Witch' that take a searching look at Swedish society throughout the 20th and 21st century. 
+          <br>
+          <br>
+          Majgull does not use any social media (Though the webmaster of this site maintains her presence on <a href="https://www.goodreads.com/author/show/165549.Majgull_Axelsson" target="_blank">Goodreads</a>). 
+          Instead, this site is the best way both to contact Majgull with inquiries and to keep abreast on any upcoming appearances. 
+          <br>
+          <br>
+          For more information on specific books by Majgull, please check the <a href="books.html">books</a> page, which contains review quotes, cover-text and ISBN numbers for all her fiction-books.<br>
+          If you want to contact Majgull, please visit the <a href="contact.html">contact</a> page and fill out the form, your message will be forwarded to Majgull.<br>
+          If you'd like more information about Majgull, her publisher or the site itself please visit the <a href="about.html">about</a> page.<br>
+          If you'd like information on upcoming appearances, they are listed on this page. All upcoming events are listed here, with links to the google calendar entry.<br>
+
+
+        </p>
       </div>
       <div class="col-md-3 col-sm-12">
         <h2>Upcoming events:</h2>
