--- a/en/contact.html
+++ b/en/contact.html
@@ -85,24 +85,24 @@
             <div class="col-md-9 col-sm-12">
                 <h1>Contact form: </h1><br>
                 <form id="maContactSheet" class="form-horizontal">
-                    <label for="inputSubject">Subject: </label>
+                    <label for="inputSubject" >Subject: </label>
                     <br>
-                    <input type="text" class="form-control" name="inputSubject" placeholder="Reason for contacting Majgull">
+                    <input type="text" class="form-control" name="inputSubject" placeholder="Subject... (required)" required>
                     <br>
                     <label for="inputEmail">Please enter your full name: </label>
                     <br>
                     <input type="text" class="form-control" name="inputFullName"
                         placeholder="Enter your full name..."><br>
-                    <label for="inputEmail">Please enter your email-address: </label>
+                    <label for="inputEmail" >Please enter your email-address: </label>
                     <br>
-                    <input type="email" class="form-control" name="inputEmail" placeholder="example@adress.com"
-                        aria-describedby="emailHelp"><br>
+                    <input type="email" class="form-control" name="inputEmail" placeholder="example@adress.com (required)"
+                        aria-describedby="emailHelp" required><br>
                     <small id="emailHelp" class="form-text text-muted" style="display: none;">Please enter the adress
                         you'd like the reply sent to.</small>
                     <label for="inputText">Please enter your message (Max 500 characters.)</label>
                     <br>
                     <input type="textarea" class="form-control" maxlength="500" name="inputMessage"
-                        placeholder="Enter your message here (500max)...">
+                        placeholder="Enter your message here (500max), required..." required>
                     <br>
                     <input type="submit" class="btn btn-primary" value="Send" id="formSubmit">
                 </form>
