Began adding content + styling CSS

--- a/en/about.html
+++ b/en/about.html
@@ -59,25 +59,37 @@
     <div class="container">
         <div class="row content-wrapper bg-light">
             <div class="col-md-3 col-sm-12">
-                <h1>Placeholder</h1>
+                <h1>Links</h1>
                 <p>
-                    This is where we'll have external links to publishers etc
+                    <h3>Swedish language publishers:</h3><br>
+                    <a href="http://www.norstedts.se/forfattare/115660-majgull-axelsson" target="_blank">Norstedt</a>
+                    <a href="https://brombergs.se/writer/majgull-axelsson/" target="_blank">Brombergs</a>
+                    <br>
+                    <h3>Links about Majgulls work:</h3><br>
+                    <a href="https://www.goodreads.com/author/show/165549.Majgull_Axelsson" target="_blank">Goodreads author-page</a>
+                    <a href="https://en.wikipedia.org/wiki/Majgull_Axelsson" target="_blank">English wikipedia entry</a>
                 </p>
             </div>
             <div class="col-md-9 col-sm-12">
                 <div class="col-md-9 col-sm-12">
-                    <h1>Placeholder</h1>
-                    <p>This is where we will have general About information about the site, Majgull and her publisher.
+                    <h1>About:</h1><br>
+                    <p>Majgull Axelsson has been actively writing fiction since the early 90s and was an active journalist long before. Raised by a waitress and a locomotive-driver, 
+                        her interest in the tumultous post-war era of Sweden has been a driving force in her authorship. She is currently published by Norstedts, with some of her earlier
+                        work still published by Brombergs. International editions of Majgulls work can be found on <a href="https://www.amazon.com/kindle-dbs/entity/author/B001H6WTJQ?_encoding=UTF8&node=283155&offset=0&pageSize=12&searchAlias=stripbooks&sort=author-sidecar-rank&page=1&langFilter=default#formatSelectorHeader" target="_blank">amazon.</a>                                                        
+                        <br>
+                        If you're looking for English language resources or comments on Majgulls work, please refer first to the Goodreads page linked from here. If you have direct inquiries, please use the contact form on this site.
                     </p>
+                    <h3>About the site:</h3><br>
+                    <p>This site is maintained by the webmaster, who you may contact with inquiries on the <a href="contact.html">contact</a> page. If you wish to contact Majgull directly, you may use the same
+                    form. All mail adressed to her will be forwarded to her, but she is unable to respond to every inquiry. </p>
                 </div>
-                </form>
 
             </div>
         </div>
     </div>
     <!-- My JavaScript -->
 
-    <script type="javascript" src="../assets/js/main.js"></script>
+    <script src="../assets/js/main.js"></script>
 
 
 
