--- a/en/books.html
+++ b/en/books.html
@@ -58,50 +58,51 @@
 
   <div class="container">
     <div class="row content-wrapper bg-light">
-      <div class="col-md-4 col-xs-12" id="books-navtab">
+      <div class="col-md-3 col-xs-12 left-col-style">
 
         <!-- Buttons that trigger the tabs in accordance with bookLoader.js -->
-        <div>
+        <div class="content-wrapper">
           <h1>Majgulls Novels:</h1>
           <br>
+          <h5>Please select from the following titles:</h5>
           <br>
-          <button class="list-group-item list-group-item-action" id="btn-april-en">April Witch</button>
-          <button class="list-group-item list-group-item-action" id="btn-rosario-en">Rosario is dead</button>
+          <button class="btn btn-default btn-book-style" id="btn-april-en">April Witch</button><br>
+          <button class="btn btn-default btn-book-style" id="btn-rosario-en">Rosario is dead</button><br>
 
-          <button class="list-group-item list-group-item-action" id="btn-nifelheim-en">Far away from
-            Nifelheim</button>
+          <button class="btn btn-default btn-book-style" id="btn-nifelheim-en">Far away from
+            Nifelheim</button><br>
 
-          <button class="list-group-item list-group-item-action" id="btn-denjagaldrigvar-en">The woman I never
-            was</button></li>
-          <button class="list-group-item list-group-item-action" id="btn-dittlivochmitt-en">Your life and
-            mine</button>
+          <button class="btn btn-default btn-book-style" id="btn-denjagaldrigvar-en">The woman I never
+            was</button><br>
+          <button class="btn btn-default btn-book-style" id="btn-dittlivochmitt-en">Your life and
+            mine</button><br>
 
-          <button class="list-group-item list-group-item-action" id="btn-moderspassion-en">Mother's Passion</button>
+          <button class="btn btn-default btn-book-style" id="btn-moderspassion-en">Mother's Passion</button><br>
 
-          <button class="list-group-item list-group-item-action" id="btn-slumpvandring-en">Random House</button>
+          <button class="btn btn-default btn-book-style" id="btn-slumpvandring-en">Random House</button><br>
 
-          <button class="list-group-item list-group-item-action" id="btn-miriam-en" href="#miriam-tab">My name is not
-            Miriam</button>
-          <button class="list-group-item list-group-item-action" id="btn-isochvatten-en">Ice and water, water and
-            ice</button>
+          <button class="btn btn-default btn-book-style" id="btn-miriam-en" href="#miriam-tab">My name is not
+            Miriam</button><br>
+          <button class="btn btn-default btn-book-style" id="btn-isochvatten-en">Ice and water, water and
+            ice</button><br>
 
         </div>
 
       </div>
-      <div class="col-md-8 col-xs-12">
+      <div class="col-md-9 col-xs-12">
         <span id="book-content-span">
-        <span id="img-container">
+          <span id="img-container">
+          </span>
+          <p id="book-data" style="float: right;">
+          <h2 id="title"></h2>
+          <br>
+          <h5 id="published"></h5>
+          <br>
+          <h5 id="isbn"></h5>
+          <br>
+          <h5 id="quote"></h5>
+          </p>
         </span>
-        <p id="book-data" style="float: right;">
-        <h2 id="title"></h2>
-        <br>
-        <h5 id="published"></h5>
-        <br>
-        <h5 id="isbn"></h5>
-        <br>
-        <h5 id="quote"></h5>
-        </p>
-      </span>
       </div>
     </div>
   </div>
