--- a/en/start.html
+++ b/en/start.html
@@ -60,7 +60,7 @@
 
   <div class="container">
     <div class="row content-wrapper bg-light">
-      <div class="col-md-3 col-sm-12">
+      <div class="col-md-3 col-sm-12 left-col-style">
         <img class="portrait-img" src="../assets/images/Majgull_axelsson_portrait.jpg">
         <br>
         <br>
@@ -68,14 +68,13 @@
           twenty languages. Amongst the awards she's received for her work is Augustpriset (1997), BMF-Plaketten (1997,
           2014) and the Ivar Lo award (2015).</p>
           <br>
-          <h6>Links:</h6>
-          <br>
 
       </div>
       <div class="col-md-6 col-sm-12">
         <h2>Welcome to Majgull Axelssons official website!</h2>
         <br>
         <br>
+        <img src="../assets/images/en-april-witch.jpg" class="image-wrap">
         <p>This website is the official homepage for Majgull Axelsson, a Swedish author who has been translated into over 20 languages. Through her career she has moved from producing
           documentary-books about child labour and destitute, homeless children to novels such as 'April Witch' that take a searching look at Swedish society throughout the 20th and 21st century. 
           <br>
