Updates to main.js visuals

--- a/en/contact.html
+++ b/en/contact.html
@@ -74,15 +74,15 @@
 
     <div class="container">
         <div class="row content-wrapper bg-light">
-            <div class="col-md-3 col-sm-12">
-                <h3>Contact information:</h3>
+            <div class="col-lg-2 col-md-12 left-col-style">
+                <h2>Contact information:</h2>
                 <br>
                 <br>
                 <p>If you'd like to contact Majgull, you can use this form. Majgull has chosen to not have a social
                     media presence, although the webmaster of this site maintains her Goodreads account. All emails will
                     be forwarded to Majgull, who will try to respond to as many inquiries as she can.</p>
             </div>
-            <div class="col-md-9 col-sm-12">
+            <div class="col-lg-9 col-md-12 center-col-style">
                 <h1>Contact form: </h1><br>
                 <form id="maContactSheet" class="form-horizontal">
                     <label for="inputSubject" >Subject: </label>
