--- a/en/start.html
+++ b/en/start.html
@@ -60,21 +60,21 @@
 
   <div class="container">
     <div class="row content-wrapper bg-light">
-      <div class="col-md-3 col-sm-12 left-col-style">
-        <img class="portrait-img" src="../assets/images/Majgull_axelsson_portrait.jpg">
+      <div class="col-lg-2 col-med-3 col-sm-12 left-col-style">
+        <img class="portrait-img" src="../assets/images/Majgull_axelsson_portrait.jpg" style="max-width: 95%;">
         <br>
         <br>
-        <p>Majgull Axelsson is an author, lecturer and journalist from Landskrona, Sweden. Her books have been translated into over
+        <h6>Majgull Axelsson is an author, lecturer and journalist from Landskrona, Sweden. Her books have been translated into over
           twenty languages. Amongst the awards she's received for her work is Augustpriset (1997), BMF-Plaketten (1997,
-          2014) and the Ivar Lo award (2015).</p>
+          2014) and the Ivar Lo award (2015).</h6>
           <br>
 
       </div>
-      <div class="col-md-6 col-sm-12">
-        <h2>Welcome to Majgull Axelssons official website!</h2>
+      <div class="col-lg-6 col-med-5 col-sm-12 center-col-style">
+        <h2>Welcome to Majgull Axelssons homepage!</h2>
         <br>
         <br>
-        <img src="../assets/images/en-april-witch.jpg" class="image-wrap">
+        <img src="../assets/images/en-april-witch.jpg" class="image-wrap" style="max-width: 45%;">
         <p>This website is the official homepage for Majgull Axelsson, a Swedish author who has been translated into over 20 languages. Through her career she has moved from producing
           documentary-books about child labour and destitute, homeless children to novels such as 'April Witch' that take a searching look at Swedish society throughout the 20th and 21st century. 
           <br>
@@ -91,11 +91,11 @@
 
         </p>
       </div>
-      <div class="col-md-3 col-sm-12">
+      <div class="col-lg-4 col-md-3 col-sm-12">
         <h2>Upcoming events:</h2>
         <p>(Please note, event-descriptions are usually listed in Swedish.)</p>
         <br>
-        <span id="calendar-events">
+        <span id="calendar-events" style="margin: auto;">
         </span>
       </div>
 
