--- a/en/about.html
+++ b/en/about.html
@@ -57,21 +57,9 @@
     </nav>
 
     <div class="container">
-        <div class="row content-wrapper bg-light">
-            <div class="col-md-3 col-sm-12">
-                <h1>Links</h1>
-                <p>
-                    <h3>Swedish language publishers:</h3><br>
-                    <a href="http://www.norstedts.se/forfattare/115660-majgull-axelsson" target="_blank">Norstedt</a>
-                    <a href="https://brombergs.se/writer/majgull-axelsson/" target="_blank">Brombergs</a>
-                    <br>
-                    <h3>Links about Majgulls work:</h3><br>
-                    <a href="https://www.goodreads.com/author/show/165549.Majgull_Axelsson" target="_blank">Goodreads author-page</a>
-                    <a href="https://en.wikipedia.org/wiki/Majgull_Axelsson" target="_blank">English wikipedia entry</a>
-                </p>
-            </div>
-            <div class="col-md-9 col-sm-12">
-                <div class="col-md-9 col-sm-12">
+        <div class="row content-wrapper bg-light center-col-style">
+            
+                <div class="col-lg-9 col-md-12 center-col-style">
                     <h1>About:</h1><br>
                     <p>Majgull Axelsson has been actively writing fiction since the early 90s and was an active journalist long before. Raised by a waitress and a locomotive-driver, 
                         her interest in the tumultous post-war era of Sweden has been a driving force in her authorship. She is currently published by Norstedts, with some of her earlier
@@ -81,9 +69,22 @@
                     </p>
                     <h3>About the site:</h3><br>
                     <p>This site is maintained by the webmaster, who you may contact with inquiries on the <a href="contact.html">contact</a> page. If you wish to contact Majgull directly, you may use the same
-                    form. All mail adressed to her will be forwarded to her, but she is unable to respond to every inquiry. </p>
-                </div>
+                   form. All mail adressed to her will be forwarded to her, but she is unable to respond to every inquiry. </p>
+             
 
+            </div>
+            <div class="col-lg-3 col-md-12 left-col-style">
+                <h3>Links:</h3>
+                <br>
+                <p>
+                    <h5>Swedish language publishers:</h5><br>
+                    <a href="http://www.norstedts.se/forfattare/115660-majgull-axelsson" target="_blank">Norstedt</a><br>
+                    <a href="https://brombergs.se/writer/majgull-axelsson/" target="_blank">Brombergs</a><br>
+                    <br>
+                    <h5>Links about Majgulls work:</h5><br>
+                    <a href="https://www.goodreads.com/author/show/165549.Majgull_Axelsson" target="_blank">Goodreads author-page</a><br>
+                    <a href="https://en.wikipedia.org/wiki/Majgull_Axelsson" target="_blank">English wikipedia entry</a><br>
+                </p>
             </div>
         </div>
     </div>
