--- a/en/books.html
+++ b/en/books.html
@@ -58,11 +58,11 @@
 
   <div class="container">
     <div class="row content-wrapper bg-light">
-      <div class="col-md-3 col-xs-12 left-col-style">
+      <div class="col-md-4 col-xs-12 left-col-style">
 
         <!-- Buttons that trigger the tabs in accordance with bookLoader.js -->
         <div class="content-wrapper">
-          <h1>Majgulls Novels:</h1>
+          <h3>Majgulls Novels:</h3>
           <br>
           <h5>Please select from the following titles:</h5>
           <br>
@@ -89,7 +89,7 @@
         </div>
 
       </div>
-      <div class="col-md-9 col-xs-12">
+      <div class="col-md-8 col-xs-12 center-col-style">
         <span id="book-content-span">
           <span id="img-container">
           </span>
