Refined animations on navbar

--- a/en/start.html
+++ b/en/start.html
@@ -91,7 +91,7 @@
 
         </p>
       </div>
-      <div class="col-lg-4 col-md-3 col-sm-12">
+      <div class="col-lg-4 col-md-3 col-sm-12 right-col-style">
         <h2>Upcoming events:</h2>
         <p>(Please note, event-descriptions are usually listed in Swedish.)</p>
         <br>
