--- a/en/about.html
+++ b/en/about.html
@@ -67,23 +67,25 @@
                         <br>
                         If you're looking for English language resources or comments on Majgulls work, please refer first to the Goodreads page linked from here. If you have direct inquiries, please use the contact form on this site.
                     </p>
+                    <br>
+                    <br>
                     <h3>About the site:</h3><br>
                     <p>This site is maintained by the webmaster, who you may contact with inquiries on the <a href="contact.html">contact</a> page. If you wish to contact Majgull directly, you may use the same
                    form. All mail adressed to her will be forwarded to her, but she is unable to respond to every inquiry. </p>
              
 
             </div>
-            <div class="col-lg-3 col-md-12 left-col-style">
+            <div class="col-lg-3 col-md-12 right-col-style">
                 <h3>Links:</h3>
                 <br>
                 <p>
                     <h5>Swedish language publishers:</h5><br>
-                    <a href="http://www.norstedts.se/forfattare/115660-majgull-axelsson" target="_blank">Norstedt</a><br>
-                    <a href="https://brombergs.se/writer/majgull-axelsson/" target="_blank">Brombergs</a><br>
+                    <a class="about-link" href="http://www.norstedts.se/forfattare/115660-majgull-axelsson" target="_blank">Norstedt</a><br>
+                    <a class="about-link" href="https://brombergs.se/writer/majgull-axelsson/" target="_blank">Brombergs</a><br>
                     <br>
                     <h5>Links about Majgulls work:</h5><br>
-                    <a href="https://www.goodreads.com/author/show/165549.Majgull_Axelsson" target="_blank">Goodreads author-page</a><br>
-                    <a href="https://en.wikipedia.org/wiki/Majgull_Axelsson" target="_blank">English wikipedia entry</a><br>
+                    <a class="about-link" href="https://www.goodreads.com/author/show/165549.Majgull_Axelsson" target="_blank">Goodreads author-page</a><br>
+                    <a class="about-link"href="https://en.wikipedia.org/wiki/Majgull_Axelsson" target="_blank">English wikipedia entry</a><br>
                 </p>
             </div>
         </div>
