--- a/en/start.html
+++ b/en/start.html
@@ -17,7 +17,7 @@
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-  <!-- Font Awesome 6-->
+  <!-- Font Awesome -->
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.0/css/all.css"
     integrity="sha384-Bfad6CLCknfcloXFOyFnlgtENryhrpZCe29RTifKEixXQZ38WheV+i/6YWSzkz3V" crossorigin="anonymous">
   <!-- My CSS -->
@@ -64,44 +64,53 @@
         <img class="portrait-img" src="../assets/images/Majgull_axelsson_portrait.jpg" style="max-width: 95%;">
         <br>
         <br>
-        <h6>Majgull Axelsson is an author, lecturer and journalist from Landskrona, Sweden. Her books have been translated into over
+        <h6>Majgull Axelsson is an author, lecturer and journalist from Landskrona, Sweden. Her books have been
+          translated into over
           twenty languages. Amongst the awards she's received for her work is Augustpriset (1997), BMF-Plaketten (1997,
           2014) and the Ivar Lo award (2015).</h6>
-          <br>
+        <br>
 
       </div>
       <div class="col-lg-6 col-med-5 col-sm-12 center-col-style">
-        <h2>Welcome to Majgull Axelssons homepage!</h2>
-        <br>
+        <h1>Welcome to Majgull Axelssons homepage!</h1>
         <br>
         <img src="../assets/images/en-april-witch.jpg" class="image-wrap" style="max-width: 45%;">
-        <p>This website is the official homepage for Majgull Axelsson, a Swedish author who has been translated into over 20 languages. Through her career she has moved from producing
-          documentary-books about child labour and destitute, homeless children to novels such as 'April Witch' that take a searching look at Swedish society throughout the 20th and 21st century. 
+        <p>This website is the official homepage for Majgull Axelsson, a Swedish author who has been translated into
+          over 20 languages. Through her career she has moved from producing
+          documentary-books about child labour and destitute, homeless children to novels such as 'April Witch' that
+          take a searching look at Swedish society throughout the 20th and 21st century.
           <br>
           <br>
-          Majgull does not use any social media (Though the webmaster of this site maintains her presence on <a href="https://www.goodreads.com/author/show/165549.Majgull_Axelsson" target="_blank">Goodreads</a>). 
-          Instead, this site is the best way both to contact Majgull with inquiries and to keep abreast on any upcoming appearances. 
+          Majgull does not use any social media (Though the webmaster of this site maintains her presence on <a
+            href="https://www.goodreads.com/author/show/165549.Majgull_Axelsson" target="_blank">Goodreads</a>).
+          Instead, this site is the best way both to contact Majgull with inquiries and to keep abreast on any upcoming
+          appearances.
           <br>
           <br>
-          For more information on specific books by Majgull, please check the <a href="books.html">books</a> page, which contains review quotes, cover-text and ISBN numbers for all her fiction-books.<br>
-          If you want to contact Majgull, please visit the <a href="contact.html">contact</a> page and fill out the form, your message will be forwarded to Majgull.<br>
-          If you'd like more information about Majgull, her publisher or the site itself please visit the <a href="about.html">about</a> page.<br>
-          If you'd like information on upcoming appearances, they are listed on this page. All upcoming events are listed here, with links to the google calendar entry.<br>
+          For more information on specific books by Majgull, please check the <a href="books.html">books</a> page, which
+          contains review quotes, cover-text and ISBN numbers for all her fiction-books.<br>
+          If you want to contact Majgull, please visit the <a href="contact.html">contact</a> page and fill out the
+          form, your message will be forwarded to Majgull.<br>
+          If you'd like more information about Majgull, her publisher or the site itself please visit the <a
+            href="about.html">about</a> page.<br>
+          If you'd like information on upcoming appearances, they are listed on this page. All upcoming events are
+          listed here, with links to the google calendar entry.<br>
 
 
         </p>
       </div>
       <div class="col-lg-4 col-md-3 col-sm-12 right-col-style">
-        <h2>Upcoming events:</h2>
-        <p>(Please note, event-descriptions are usually listed in Swedish.)</p>
+        
+          <h3>Upcoming events:</h3>
+          <i class='far fa-calendar-check'></i>: Calendar link<br>
+          <i class='fas fa-map-marker'></i>: Map link<br>
+          <i class="fas fa-clock"></i>: Date & Time<br>
+        
         <br>
         <span id="calendar-events" style="margin: auto;">
         </span>
       </div>
-
-
     </div>
-
   </div>
 
 
