Added more content + goodreads links

--- a/en/books.html
+++ b/en/books.html
@@ -79,7 +79,7 @@
 
           <button class="btn btn-default btn-book-style" id="btn-moderspassion-en">Mother's Passion</button><br>
 
-          <button class="btn btn-default btn-book-style" id="btn-slumpvandring-en">Random House</button><br>
+          <button class="btn btn-default btn-book-style" id="btn-slumpvandring-en">Random Walk</button><br>
 
           <button class="btn btn-default btn-book-style" id="btn-miriam-en" href="#miriam-tab">My name is not
             Miriam</button><br>
@@ -101,6 +101,8 @@
           <h5 id="isbn"></h5>
           <br>
           <h5 id="quote"></h5>
+          <br>
+          <h5 id="goodreads"></h5>
           </p>
         </span>
       </div>
