Layout updates + main.JS anims

--- a/en/about.html
+++ b/en/about.html
@@ -1,13 +1,11 @@
 <!-- English language version, only content is affected, code is the same in the /sv/ version with the exception of changed file-paths for internal assets.-->
 <!doctype html>
 <html lang="en">
-
 <head>
     <title>About the site</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
 
     <!-- jQuery, Bootstrap etc-->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
@@ -20,7 +18,6 @@
     <!-- My CSS -->
     <link rel="stylesheet" href="../assets/css/styles.css">
 </head>
-
 <body id="bg-img">
     <!-- NavBar -->
     <nav class="navbar navbar-expand-sm bg-light navbar-light" id="navbar-styles">
@@ -29,7 +26,7 @@
         <div class="collapse navbar-collapse" id="main-nav">
             <ul class="navbar-nav">
                 <li class="nav-item mr-2">
-                    <a class="nav-link active" href="start.html">Home</a>
+                    <a class="nav-link" href="start.html">Home</a>
                 </li>
                 <li class="nav-item mr-2">
                     <a class="nav-link" href="contact.html">Contact</a>
@@ -42,52 +39,57 @@
                 </li>
             </ul>
         </div>
-
-        <!-- Navbar section for toggling language, TODO: update on each html so the href is correct for that page -->
-        <ul class="navbar-nav">
-            <li class="nav-item">
-                <a class="nav-link mr-4" href="../sv/start.html"><img
-                        src="../assets/images/icons/sweden-flag-icon-16.png"></a>
-            </li>
-            <li class="nav-item mr-4">
-                <a class="nav-link" href="../en/start.html"><img
-                        src="../assets/images/icons/united-kingdom-flag-icon-16.png"></a>
-            </li>
-        </ul>
     </nav>
 
     <div class="container">
         <div class="row content-wrapper bg-light center-col-style">
-            
-                <div class="col-lg-9 col-md-12 center-col-style">
-                    <h1>About:</h1><br>
-                    <p>Majgull Axelsson has been actively writing fiction since the early 90s and was an active journalist long before. Raised by a waitress and a locomotive-driver, 
-                        her interest in the tumultous post-war era of Sweden has been a driving force in her authorship. She is currently published by Norstedts, with some of her earlier
-                        work still published by Brombergs. International editions of Majgulls work can be found on <a href="https://www.amazon.com/kindle-dbs/entity/author/B001H6WTJQ?_encoding=UTF8&node=283155&offset=0&pageSize=12&searchAlias=stripbooks&sort=author-sidecar-rank&page=1&langFilter=default#formatSelectorHeader" target="_blank">amazon.</a>                                                        
-                        <br>
-                        If you're looking for English language resources or comments on Majgulls work, please refer first to the Goodreads page linked from here. If you have direct inquiries, please use the contact form on this site.
-                    </p>
+
+            <div class="col-lg-9 col-md-12 center-col-style">
+                <h1>About:</h1><br>
+                <p>Majgull Axelsson has been actively writing fiction since the early 90s and was an active journalist
+                    long before. Raised by a waitress and a locomotive-driver,
+                    her interest in the tumultous post-war era of Sweden has been a driving force in her authorship. She
+                    is currently published by Norstedts, with some of her earlier
+                    work still published by Brombergs. International editions of Majgulls work can be found on <a
+                        href="https://www.amazon.com/kindle-dbs/entity/author/B001H6WTJQ?_encoding=UTF8&node=283155&offset=0&pageSize=12&searchAlias=stripbooks&sort=author-sidecar-rank&page=1&langFilter=default#formatSelectorHeader"
+                        target="_blank">amazon.</a>
                     <br>
-                    <br>
-                    <h3>About the site:</h3><br>
-                    <p>This site is maintained by the webmaster, who you may contact with inquiries on the <a href="contact.html">contact</a> page. If you wish to contact Majgull directly, you may use the same
-                   form. All mail adressed to her will be forwarded to her, but she is unable to respond to every inquiry. </p>
-             
+                    If you're looking for English language resources or comments on Majgulls work, please refer first to
+                    the Goodreads page linked from here. If you have direct inquiries, please use the contact form on
+                    this site.
+                </p>
+                <br>
+                <br>
+                <h3>About the site:</h3><br>
+                <p>This site is maintained by the webmaster, who you may contact with inquiries on the <a
+                        href="contact.html">contact</a> page. If you wish to contact Majgull directly, you may use the
+                    same
+                    form. All mail adressed to her will be forwarded to her, but she is unable to respond to every
+                    inquiry. </p>
+
 
             </div>
             <div class="col-lg-3 col-md-12 right-col-style">
                 <h2>Links:</h2>
                 <br>
                 <p>
-                    <h4>Swedish language publishers:</h4><br>
-                    <a class="about-link" href="http://www.norstedts.se/forfattare/115660-majgull-axelsson" target="_blank">Norstedt</a><br>
-                    <a class="about-link" href="https://brombergs.se/writer/majgull-axelsson/" target="_blank">Brombergs</a><br>
-                    <br>
-                    <h4>Links about Majgulls work:</h4><br>
-                    <a class="about-link" href="https://www.goodreads.com/author/show/165549.Majgull_Axelsson" target="_blank">Goodreads author-page</a><br>
-                    <a class="about-link"href="https://en.wikipedia.org/wiki/Majgull_Axelsson" target="_blank">English wikipedia entry</a><br>
+                <h4>Swedish language publishers:</h4><br>
+                <a class="about-link" href="http://www.norstedts.se/forfattare/115660-majgull-axelsson"
+                    target="_blank">Norstedt</a><br>
+                <a class="about-link" href="https://brombergs.se/writer/majgull-axelsson/"
+                    target="_blank">Brombergs</a><br>
+                <br>
+                <h4>Links about Majgulls work:</h4><br>
+                <a class="about-link" href="https://www.goodreads.com/author/show/165549.Majgull_Axelsson"
+                    target="_blank">Goodreads author-page</a><br>
+                <a class="about-link" href="https://en.wikipedia.org/wiki/Majgull_Axelsson" target="_blank">English
+                    wikipedia entry</a><br>
                 </p>
             </div>
+        </div>
+        <!-- Language toggling link -->
+        <div class="flag-icon-wrapper">
+            <a href="../sv/about.html"><img src="../assets/images/icons/lang-token-en.png" class="flag-toggle-icon"></a>
         </div>
     </div>
     <!-- My JavaScript -->
