--- a/en/books.html
+++ b/en/books.html
@@ -19,7 +19,6 @@
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <!-- My CSS -->
   <link rel="stylesheet" href="../assets/css/styles.css">
-
 </head>
 
 <body id="bg-img">
@@ -43,17 +42,6 @@
         </li>
       </ul>
     </div>
-
-    <!-- Navbar section for toggling language, TODO: update on each html so the href is correct for that page -->
-    <ul class="navbar-nav">
-      <li class="nav-item">
-        <a class="nav-link mr-4" href="../sv/books.html"><img src="../assets/images/icons/sweden-flag-icon-16.png"></a>
-      </li>
-      <li class="nav-item mr-4">
-        <a class="nav-link" href="../en/books.html"><img
-            src="../assets/images/icons/united-kingdom-flag-icon-16.png"></a>
-      </li>
-    </ul>
   </nav>
 
   <div class="container">
@@ -106,6 +94,10 @@
           </p>
         </span>
       </div>
+    </div>
+    <!-- Language toggling link -->
+    <div class="flag-icon-wrapper">
+      <a href="../sv/contact.html"><img src="../assets/images/icons/lang-token-en.png" class="flag-toggle-icon"></a>
     </div>
   </div>
 
