--- a/en/start.html
+++ b/en/start.html
@@ -26,7 +26,7 @@
 
 <body id="bg-img">
   <!-- NavBar -->
-  <nav class="navbar navbar-expand-sm bg-light navbar-light" id="navbar-styles">
+  <nav class="container-fluid navbar navbar-expand-sm bg-light navbar-light" id="navbar-styles">
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#main-nav"><span
         class="navbar-toggler-icon"></span></button>
     <div class="collapse navbar-collapse" id="main-nav">
@@ -45,17 +45,6 @@
         </li>
       </ul>
     </div>
-
-    <!-- Navbar section for toggling language, TODO: update on each html so the href is correct for that page -->
-    <ul class="navbar-nav">
-      <li class="nav-item">
-        <a class="nav-link mr-4" href="../sv/start.html"><img src="../assets/images/icons/sweden-flag-icon-16.png"></a>
-      </li>
-      <li class="nav-item mr-4">
-        <a class="nav-link" href="../en/start.html"><img
-            src="../assets/images/icons/united-kingdom-flag-icon-16.png"></a>
-      </li>
-    </ul>
   </nav>
 
   <div class="container">
@@ -110,6 +99,11 @@
         <span id="calendar-events" style="margin: auto;">
         </span>
       </div>
+    </div>
+
+    <!-- Language toggling link -->
+    <div class="flag-icon-wrapper">
+      <a href="../sv/start.html"><img src="../assets/images/icons/lang-token-en.png" class="flag-toggle-icon"></a>
     </div>
   </div>
 
